cabal-version:      3.4
name:               ghengin-dist-macos
version:            0.1.0.0
tested-with:        GHC ==9.4.4 || ==9.6.1
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             romes
maintainer:         rodrigo.m.mesquita@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable ghengin-dist-macos
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.17.0.0,
                      shake,
                      string-interpolate
    hs-source-dirs:   app
    default-language: GHC2021
