cabal-version:      3.4
name:               ghengin
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

-- tested-with: GHC ==9.4.4 || ==9.6.1
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       ../LICENSE
author:             romes
maintainer:         rodrigo.m.mesquita@gmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    ../CHANGELOG.md
-- extra-source-files:
--     cbits/imgui_extensions/*.cpp
--     cbits/imgui_extensions/*.hpp

flag dev
  default: True
  manual: True
  description: This flag controls development settings and should be manually disabled when the game is being built for release. The ghengin packaging tools will take care to set this flag to false when packaging.
               When enabled, vulkan validation layers are enabled.
               Run `cabal build -f-dev` to build with the flag disabled.
               -- Enable with -f+dev

common common-flags

  if flag(dev)
    ghc-options: -Wall -O0

                 -- Debugging symbols
                 --------------------
                 -- -g3

                 -- Linting
                 ----------
                 -- -debug
                 -- -dcore-lint
                 -- -dlint
                 -dasm-lint
                 -dcmm-lint
                 -dstg-lint
                 -- -falignment-sanitisation

    cc-options: -O0 -DDEBUG
    cpp-options: -DDEBUG
                 -DDEBUG_TRACE
                 -- -DTHINGS_ARE_GOING_THAT_BAD
  else
    ghc-options: -Wall -O2
    -- -fexpose-all-unfoldings -fspecialize-aggressively
    -- -fllvm
    cc-options: -O2

  default-extensions: UnicodeSyntax,
                      MultiParamTypeClasses,
                      NoStarIsType,
                      RankNTypes,
                      DataKinds,
                      PolyKinds,
                      GADTs,
                      ViewPatterns,
                      TypeApplications,
                      TypeFamilies,
                      ExplicitNamespaces,
                      TypeFamilyDependencies,
                      TypeOperators,
                      LambdaCase,
                      BlockArguments,
                      RecordWildCards,
                      UnboxedTuples,
                      PatternSynonyms,
                      DisambiguateRecordFields,
                      DeriveGeneric,
                      LinearTypes,
                      QualifiedDo,
                      QuantifiedConstraints,
                      -- Use Ghengin.Core.Prelude!
                      NoImplicitPrelude,

                      -- This is just an experiment, but honestly it might be
                      -- the right thing to do by default for the engine?

                      -- If you find this comment here later, try benchmarking this
                      -- Strict,
                      -- StrictData,

  default-language: GHC2021

library
    -- Import common warning flags.
    import:           common-flags

    -- Modules exported by the library.
    exposed-modules:  Ghengin,

                      Ghengin.Component.Camera,
                      Ghengin.Component.Mesh.Cube,
                      Ghengin.Component.Mesh.Hex,
                      Ghengin.Component.Mesh.Obj,
                      Ghengin.Component.Mesh.Sphere,
                      Ghengin.Component.Transform,
                      Ghengin.Component.Transform.Animation,
                      Ghengin.Component.UI,
                      Ghengin.Component.Orphans,

                      Ghengin.DearImGui,
                      Ghengin.DearImGui.Gradient,

                      Ghengin.Input,

                      Ghengin.Render,
                      Ghengin.Render.Queue,

                      Ghengin.Scene,
                      Ghengin.Scene.Graph,

                      Ghengin.Shader,
                      Ghengin.Shader.FIR,
                      Ghengin.Shader.Syntactic,
                      Ghengin.Shader.Utils,
                      Ghengin.Shader.Fixed,
                      Ghengin.Shader.Lighting,

                      Ghengin.Utils,
                      Ghengin.World,

    -- Provide all the batteries
    reexported-modules:

        -- apecs
        Apecs,
        -- reference-counting
        Data.Linear.Alias
    -- reexported-modules: Ghengin.Vulkan.Renderer.Kernel,
    --                     Ghengin.Vulkan.Renderer.DescriptorSet,
    --                     Ghengin.Vulkan.Renderer.Buffer,
    --                     Ghengin.Vulkan.Renderer.Pipeline,
    --                     Ghengin.Vulkan.Renderer.RenderPass,
    --                     Ghengin.Vulkan.Renderer.Texture,
    --                     Ghengin.Vulkan.Renderer.Sampler

    -- Modules included in this library but not exported.
    -- other-modules:

    -- cbits
    -- include-dirs:       cbits/imgui_extensions
    cxx-options:        -std=c++11
    -- cxx-sources:        cbits/imgui_extensions/imgui_color_gradient.cpp
    -- extra-libraries:    stdc++
    
    if flag(dev)
      cpp-options: -DDEVELOPMENT

    -- Other library packages from which modules are imported.
    build-depends:    base >=4.17,
                      vulkan >=3.23,
                      GLFW-b >=3.3,
                      vector >=0.13,
                      vector-sized >=1.4,
                      fir     >=0.1,
                      bytestring,
                      mtl,
                      text >= 2.0.1,
                      containers,
                      apecs,
                      geomancy >= 0.2.4.2,
                      wavefront,
                      time,
                      split,
                      dear-imgui >= 2.1.3,
                      StateVar,
                      derive-storable,
                      random,
                      gl-block,
                      -- ghc-typelits-natnormalise,
                      fast-logger,
                      JuicyPixels,
                      inline-c-cpp,
                      primitive,
                      -- fir already depends on lens, so we might as well
                      lens >= 5.2,
                      linear-base,
                      reference-counting,
                      ghengin-core,
                      ghengin-core:vulkan,
                      ghengin-core:backend-independent-bits,
                      linear-utils

                      -- witch,
                      -- TODO: algebraic-graphs

    -- ROMES: To reproduce error message bug with backpack, comment out some of the requires lines below:
    mixins:           ghengin-core
                      requires ( Ghengin.Core.Renderer.Kernel as Ghengin.Vulkan.Renderer.Kernel
                               , Ghengin.Core.Renderer.DescriptorSet as Ghengin.Vulkan.Renderer.DescriptorSet
                               , Ghengin.Core.Renderer.Buffer as Ghengin.Vulkan.Renderer.Buffer
                               , Ghengin.Core.Renderer.Pipeline as Ghengin.Vulkan.Renderer.Pipeline
                               , Ghengin.Core.Renderer.RenderPass as Ghengin.Vulkan.Renderer.RenderPass
                               , Ghengin.Core.Renderer.Texture as Ghengin.Vulkan.Renderer.Texture
                               , Ghengin.Core.Renderer.Sampler as Ghengin.Vulkan.Renderer.Sampler
                               , Ghengin.Core.Renderer.Command as Ghengin.Vulkan.Renderer.Command
                               , Ghengin.Core.Renderer as Ghengin.Vulkan.Renderer
                               )

    -- Directories containing source files.
    hs-source-dirs:   ghengin

--------------------------------------------------------------------------------
-- Sub-libraries for engine components
--------------------------------------------------------------------------------

library camera
    import:           common-flags
    visibility: public
    exposed-modules:  Ghengin.Component.Camera
    build-depends:    base >=4.19.0.0, ghengin-core, ghengin-core:backend-independent-bits, linear-base, linear-utils, geomancy
    hs-source-dirs:   ghengin-camera
    default-language: GHC2021

library geometry
    import:           common-flags
    visibility: public
    exposed-modules:  Game.Geometry, Game.Geometry.Sphere
    build-depends:    base >=4.19.0.0, ghengin-core:backend-independent-bits, ghengin-core, vector, containers, split, geomancy
    hs-source-dirs:   ghengin-geometry
    default-language: GHC2021

--------------------------------------------------------------------------------
-- Testsuites and old examples
--------------------------------------------------------------------------------

test-suite ghengin-test
    -- Import common warning flags.
    import:           common-flags

    -- Base language which the package is written in.
    default-language: GHC2021

    -- Modules included in this executable, other than Main.
    -- other-modules:    Main.Apecs

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: UnicodeSyntax

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          Main.hs

    -- Test dependencies.
    build-depends:
        base >=4.17.0.0,
        ghengin


executable planets
    main-is:          Main.hs
    other-modules: Planet, Noise, Shader
    default-extensions: UnicodeSyntax
    build-depends:
        base >=4.17.0.0,
        ghengin,
        -- Can't depend on this without instancing it because of backpack
        ghengin-core,
        ghengin-core:vulkan,
        ghengin-core:backend-independent-bits,
        mtl, vector, hsnoise, containers, random, linear-base,
        derive-storable

    ghc-options: -dcmm-lint -dstg-lint -dasm-lint -g2 -rtsopts -debug
    cpp-options: -DDEBUG

    -- ghc-options: -ddump-simpl
                 -- -ddump-to-file
                 -- -dsuppress-ticks
                 -- -dsuppress-stg-exts
                 -- -dsuppress-coercions
                 -- -dsuppress-idinfo
                 -- -dsuppress-unfoldings
                 -- -dsuppress-module-prefixes
                 -- -dsuppress-timestamps
                 -- -dsuppress-uniques
                 -- -dsuppress-var-kinds

    -- Directories containing source files.
    hs-source-dirs:   planets
    mixins:           ghengin-core
                      requires ( Ghengin.Core.Renderer.Kernel as Ghengin.Vulkan.Renderer.Kernel
                               , Ghengin.Core.Renderer.DescriptorSet as Ghengin.Vulkan.Renderer.DescriptorSet
                               , Ghengin.Core.Renderer.Buffer as Ghengin.Vulkan.Renderer.Buffer
                               , Ghengin.Core.Renderer.Pipeline as Ghengin.Vulkan.Renderer.Pipeline
                               , Ghengin.Core.Renderer.RenderPass as Ghengin.Vulkan.Renderer.RenderPass
                               , Ghengin.Core.Renderer.Texture as Ghengin.Vulkan.Renderer.Texture
                               , Ghengin.Core.Renderer.Sampler as Ghengin.Vulkan.Renderer.Sampler
                               , Ghengin.Core.Renderer.Command as Ghengin.Vulkan.Renderer.Command
                               , Ghengin.Core.Renderer as Ghengin.Vulkan.Renderer
                               )

    -- Base language which the package is written in.
    default-language: GHC2021

-- executable ocean
--     -- .hs or .lhs file containing the Main module.
--     main-is:          Main.hs

--     -- Modules included in this executable, other than Main.
--     other-modules:    Ocean.Shader

--     -- LANGUAGE extensions used by modules in this package.
--     default-extensions: UnicodeSyntax

--     -- Other library packages from which modules are imported.
--     build-depends:
--         base ^>=4.17.0.0,
--         ghengin,
--         mtl,
--         vector,
--         containers,
--         hsnoise

--     -- Directories containing source files.
--     hs-source-dirs:   ocean

--     -- Base language which the package is written in.
--     default-language: GHC2021

