cabal-version:      3.4
name:               ghengin
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

tested-with:        GHC ==9.12.2
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       ../LICENSE
author:             romes
maintainer:         rodrigo.m.mesquita@gmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    ../CHANGELOG.md
-- extra-source-files:
--     cbits/imgui_extensions/*.cpp
--     cbits/imgui_extensions/*.hpp

flag dev
  default: True
  manual: True
  description: This flag controls development settings and should be manually disabled when the game is being built for release. The ghengin packaging tools will take care to set this flag to false when packaging.
               When enabled, vulkan validation layers are enabled.
               Run `cabal build -f-dev` to build with the flag disabled.
               -- Enable with -f+dev

common common-flags

  if flag(dev)
    ghc-options: -Wall -O0

                 -- Debugging symbols
                 --------------------
                 -- -g3

                 -- Linting
                 ----------
                 -- -debug
                 -- -dcore-lint
                 -- -dlint
                 -- -dasm-lint
                 -- -dcmm-lint
                 -- -dstg-lint
                 -- -falignment-sanitisation

    cc-options: -O0 -DDEBUG
    cpp-options: -DDEBUG
                 -DDEBUG_TRACE
                 -- -DTHINGS_ARE_GOING_THAT_BAD
  else
    ghc-options: -Wall -O
    -- -fexpose-all-unfoldings -fspecialize-aggressively
    -- -fllvm
    cc-options: -O

  default-extensions: UnicodeSyntax,
                      MultiParamTypeClasses,
                      NoStarIsType,
                      RankNTypes,
                      DataKinds,
                      PolyKinds,
                      GADTs,
                      ViewPatterns,
                      TypeApplications,
                      TypeFamilies,
                      ExplicitNamespaces,
                      TypeFamilyDependencies,
                      TypeOperators,
                      LambdaCase,
                      BlockArguments,
                      RecordWildCards,
                      UnboxedTuples,
                      PatternSynonyms,
                      DisambiguateRecordFields,
                      DeriveGeneric,
                      LinearTypes,
                      QualifiedDo,
                      QuantifiedConstraints,
                      -- Use Ghengin.Core.Prelude!
                      NoImplicitPrelude,

                      -- This is just an experiment, but honestly it might be
                      -- the right thing to do by default for the engine?

                      -- If you find this comment here later, try benchmarking this
                      -- Strict,
                      -- StrictData,

  default-language: GHC2021

-- The main ghengin library, which wraps the linear Renderer from
-- `ghengin-core` and provides an unrestricted monad on top of it.
library
    import:           common-flags
    exposed-modules:  Ghengin.Monad
    build-depends:    base >=4.19.0.0, ghengin-core, ghengin-core:backend-independent-bits,
                      linear-base, linear-utils, geomancy >= 0.3
    hs-source-dirs:   ghengin
    default-language: GHC2021

--------------------------------------------------------------------------------
-- Sub-libraries for engine components
--------------------------------------------------------------------------------

library camera
    import:           common-flags
    visibility: public
    exposed-modules:  Ghengin.Camera, Ghengin.Camera.Shader.Lighting
    build-depends:    base >=4.19.0.0, ghengin-core, ghengin-core:backend-independent-bits,
                      linear-base, linear-utils, geomancy >= 0.3
    hs-source-dirs:   ghengin-camera
    default-language: GHC2021

library geometry
    import:           common-flags
    visibility: public
    exposed-modules:  Ghengin.Geometry, Ghengin.Geometry.Sphere, Ghengin.Geometry.Cube,
                      Ghengin.Geometry.Transform, Ghengin.Geometry.Normals,
                      Ghengin.Geometry.Vectors,
                      Ghengin.Geometry.Obj
    build-depends:    base >=4.19.0.0, ghengin-core:backend-independent-bits,
                      ghengin-core, vector, containers, split, geomancy >= 0.3,
                      linear-base, reference-counting, wavefront
    hs-source-dirs:   ghengin-geometry
    default-language: GHC2021

-- todo: if flag(vulkan) or something to either expose the Vulkan module or
-- something else.
library dear-imgui
    import:           common-flags
    visibility: public
    exposed-modules:  Ghengin.DearImGui.UI, Ghengin.DearImGui.Vulkan
    build-depends:    base >=4.19.0.0, ghengin-core:backend-independent-bits,
                      ghengin-core:vulkan, vector, containers, geomancy >= 0.3,
                      linear-base, reference-counting, vulkan, dear-imgui,
                      ghengin-core, generics-sop, text, data-default
    hs-source-dirs:   ghengin-dear-imgui
    default-language: GHC2021
    mixins:           ghengin-core
                        requires ( Ghengin.Core.Renderer.Kernel as Ghengin.Vulkan.Renderer.Kernel
                                 , Ghengin.Core.Renderer.DescriptorSet as Ghengin.Vulkan.Renderer.DescriptorSet
                                 , Ghengin.Core.Renderer.Buffer as Ghengin.Vulkan.Renderer.Buffer
                                 , Ghengin.Core.Renderer.Pipeline as Ghengin.Vulkan.Renderer.Pipeline
                                 , Ghengin.Core.Renderer.RenderPass as Ghengin.Vulkan.Renderer.RenderPass
                                 , Ghengin.Core.Renderer.Texture as Ghengin.Vulkan.Renderer.Texture
                                 , Ghengin.Core.Renderer.Sampler as Ghengin.Vulkan.Renderer.Sampler
                                 , Ghengin.Core.Renderer.Command as Ghengin.Vulkan.Renderer.Command
                                 , Ghengin.Core.Renderer as Ghengin.Vulkan.Renderer
                                 )
--------------------------------------------------------------------------------
-- Testsuite
--------------------------------------------------------------------------------

-- test-suite ghengin-test
--     import:           common-flags
--     default-language: GHC2021
--     default-extensions: UnicodeSyntax
--     type:             exitcode-stdio-1.0
--     hs-source-dirs:   test
--     main-is:          Main.hs
--     build-depends:
--         base >=4.17.0.0,
--         ghengin
--
