cabal-version:      3.4

--------------------------------------------------------------------------------
-- this file is split off from ../ghengin.cabal
-- we had to split these libraries into a different package
-- to fix HLS when using backpack
-- when that's fixed, move the packages back together to the same cabal project file
--------------------------------------------------------------------------------

name:               linear-utils
version:            0.1.0.0
tested-with:        GHC ==9.10.1
license:            BSD-3-Clause
license-file:       ../LICENSE
author:             romes
maintainer:         rodrigo.m.mesquita@gmail.com
category:           Graphics
build-type:         Simple
extra-doc-files:    ../CHANGELOG.md

flag dev
  default: True
  manual: True
  description: This flag controls development settings and should be manually disabled when the game is being built for release. The ghengin packaging tools will take care to set this flag to false when packaging.
               When enabled, vulkan validation layers are enabled.
               Run `cabal build -f-dev` to build with the flag disabled.
               -- Enable with -f+dev

common common-flags

  if flag(dev)
    ghc-options: -Wall
                 -- -dasm-lint
                 -- -dcmm-lint
                 -- -dstg-lint

    cc-options:  -DDEBUG
    cpp-options: -DDEBUG
                 -- -DDEBUG_TRACE
  else
    ghc-options: -Wall -O2
    cc-options: -O2

  default-extensions: UnicodeSyntax,
                      MultiParamTypeClasses,
                      NoStarIsType,
                      RankNTypes,
                      DataKinds,
                      PolyKinds,
                      GADTs,
                      ViewPatterns,
                      TypeApplications,
                      TypeFamilies,
                      ExplicitNamespaces,
                      TypeFamilyDependencies,
                      TypeOperators,
                      LambdaCase,
                      BlockArguments,
                      RecordWildCards,
                      UnboxedTuples,
                      PatternSynonyms,
                      DisambiguateRecordFields,
                      DeriveGeneric,
                      LinearTypes,
                      QualifiedDo,
                      QuantifiedConstraints,

                      -- Use Ghengin.Core.Prelude!
                      NoImplicitPrelude,

  default-language: GHC2021

-- Linear wrappers over things like IntMap and Vulkan bindings
library
    import:           common-flags

    exposed-modules:  Data.IntMap.Linear,
                      Data.Map.Linear,
                      Data.Unrestricted.Linear.Orphans,
                      Vulkan.Linear

    hs-source-dirs:   linear-utils

    build-depends:    base,
                      linear-base,
                      vulkan,
                      reference-counting,
                      containers,
                      vector,
                      constraints,
                      bytestring

